[project]
name = "db-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = [".."]

[tool.ruff]
line-length = 120
